added the overlay

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div class="overlay" id="overlay">
+        <h3> Searching .......</h3>
+    </div>
 <div class="start">
     <header>
         <a href="#">yummy.eats</a>
@@ -22,7 +24,7 @@
             <label for="city"> Enter Your City</label>
             <input  type="text" id="city">
             <p style="color: gray;">Example:New york</p>
-            <button class="mbutton" type="submit">Find</button>
+            <button id="orangebutton" class="mbutton" type="button">Find</button>
         </form>
     </div>
 </div>
@@ -36,7 +38,7 @@
             </p>
             <img class="food" src="food.jpg" alt="orange">
         </div>
-    
+        <script src="main.js"></script>
     
 
 </body>
